# ocrmypdf-ocrdemo

./: LICENSE  NOTICE  README.md  pyproject.toml
src/ocrmypdf_docread/: client.py  config.py  mapping.py  options.py  plugin.py
src/ocrmypdf_ocrdemo/: client.py  config.py  mapping.py  options.py  plugin.py
tests/: test_mapping.py
